; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/nfpcore/extr_nfp_cppcore.c_nfp_cpp_area_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/nfpcore/extr_nfp_cppcore.c_nfp_cpp_area_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_cpp_area = type { i32 }
%struct.nfp_cpp = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfp_cpp_area* @nfp_cpp_area_alloc(%struct.nfp_cpp* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.nfp_cpp*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.nfp_cpp* %0, %struct.nfp_cpp** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.nfp_cpp*, %struct.nfp_cpp** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = call %struct.nfp_cpp_area* @nfp_cpp_area_alloc_with_name(%struct.nfp_cpp* %9, i32 %10, i32* null, i64 %11, i64 %12)
  ret %struct.nfp_cpp_area* %13
}

declare dso_local %struct.nfp_cpp_area* @nfp_cpp_area_alloc_with_name(%struct.nfp_cpp*, i32, i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
